Kompass fungerar, dock inte särskilt estetisk.

--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DisplayMessageActivity"
+            android:name=".CompassActivity"
             android:label="@string/title_activity_display_message"
             android:parentActivityName=".MyActivity" >
             <meta-data
